--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="black_light">#1E1E1E</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_light">#F5F5F5</color>
     <color name="red">#EB5252</color>
+    <color name="red_light">#EB8080</color>
 </resources>
